Updated css to fix off center elements

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,12 @@ body {
   left: 40px;
 }
 
+.hide {
+  position: relative;
+  margin: 0 auto;
+  width: 80%;
+}
+
 /* About CSS */
 
 .secondnav {
